fixed z-index issue

--- a/src/css/Modal.scss
+++ b/src/css/Modal.scss
@@ -26,6 +26,7 @@
       position: relative;
       text-align: left;
       width: 50%;
+      z-index: 501;
 
       button {
         float: right;
